[package]
name = "realesrgan-ncnn-vulkan-gui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
# embed-resource = "1.3"

[dependencies.iced]
version = "^0.9.0"
features = ["tokio"]

[dependencies.rfd]
version = "0.11.3"
