[package]
name = "realesrgan-ncnn-vulkan-gui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
embed-resource = "1.3"

[dependencies.async-std]
version = "^1.0.0"

[dependencies.iced]
version = "^0.9.0"
features = ["async-std"]

[dependencies.rfd]
version = "0.11.3"
features = ["common-controls-v6"]
